--- a/Website.html
+++ b/Website.html
@@ -36,7 +36,6 @@
             margin: -0.5em;
             padding: 1em;
             width: 300px;
-            height: 540px;
         }
 
         .product img {
@@ -55,16 +54,16 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            height: 110px;
+            height: 50px;
             font-size: 25px;
         }
         button {
-            border-radius: 7px;
+            border-radius: %;
             text-align: center;
             margin: 1em;
-            width: 100px;
-            height: 30px;
-            margin-left: 100px
+            width: 120px;
+            height: 40px;
+            margin-left: 91px;
         }
         a {
             color: black;
@@ -78,15 +77,7 @@
 
     <section id="products">
     </section>
-
-    <div class="cart">
-        <h2>Shopping Cart</h2>
-        <ul id="cart-items" align="left">
-        </ul>
-    </div>
-
     <script>
-
         const products = [
             { id: 1, name: 'New Hody', price: 3000, image: 'New Hody.jpg' },
             { id: 1, name: 'Dragon Ball Hody', price: 3000, image: 'The Second Hody.jpg' },
@@ -142,7 +133,7 @@
     </script>
 
     <footer>
-        <p>&copy; 2023 A&W. All rights reserved.</p>
+    <p>&copy; 2023 A&W. All rights reserved.</p>
     </footer>
 </body>
 </html>
